2010-07-13  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* RegistryKey.cs: Call the proper UnixRegistryApi.CreateSubKey overload.
	* UnixRegistryApi.cs: Implement basic support for volatile keys, by
	storing them in memory instead of disk. We lack the support to have
	them available to other processes - and given the fact that a
	workaround would be gross, just don't implement that now.

2010-07-11  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* RegistryKey.cs: Add 4.0 CreateSubKey overloads taking a RegistryOptions
	parameter.
	* IRegistryApi.cs: Add a new overload for CreateSubKey for the 4.0
	profile. Not nice, but better than to change the signature for each
	profile.
	* Win32RegistryApi.cs: Properly recognize a handle where a volatile
	key is requested.
	* UnixRegistryApi.cs: Stubbed.

2010-07-09  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* Win32RegistryApi.cs: Use RegCreateKeyEx instead of RegCreateKey, as
	we need it to further support both the missing bits and the 4.0
	features.

2010-02-08  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* UnixRegistryApi.cs: When retrieving the registry keys from file in a
	unix system, if the value returned by a SecurityElement is null,
	use String.Empty, since at this point we know that this registry key
	*exists* and *cannot* have a null value, as specified in the public
	api.
	Fixes #543206.

2009-11-21  Miguel de Icaza  <miguel@novell.com>

	* RegistryKey.cs: Implement a GetValueKind and a handful of
	methods. 

2009-04-25  Sebastien Pouliot  <sebastien@ximian.com>

	* *.cs: Exclude the files for the NET_2_1 profile, since they are
	unneeded and adds a bunch (23) [SecuritySafeCritical] to audit for
	Moonlight

2008-02-25  Robert Jordan  <robertj@gmx.net>

	* Win32RegistryApi.cs (ToString): Don't emit the handle value
	under NET_2_0.
	See http://msdn2.microsoft.com/en-us/netframework/aa497241.aspx.

2008-02-01  Gert Driesen  <drieseng@users.sourceforge.net>
